# scrapy-emistat

./: README.md  pyproject.toml  scrapy.cfg
scrapy_numbeo_ccli/: expatistan.py  numbeo-ccli.py  output.json  settings.py  spider.py
