[tool.poetry]
name = "scrapy-numbeo-ccli"
version = "0.1.0"
description = ""
authors = ["Zakhar Kogan <36503576+zaharkogan@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "scrapy_numbeo_ccli"}]

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
